using System.Net.Http.Json;
using orbital.core.Metadata;
using orbital.core.Models;

namespace orbital.web.Services;

public class MetadataHttpClient : IMetadataService
{
    private readonly HttpClient _httpClient;
    private readonly Dictionary<string, object> _cache = new();

    public IReadOnlyList<EventStatusDefinition> EventStatuses => throw new NotImplementedException();

    public MetadataHttpClient(HttpClient httpClient)
    {
        _httpClient = httpClient;
    }
    
    public async Task<IEnumerable<T>> GetMetadataItemsAsync<T>(string metadataType) where T : IMetadataItem
    {
        string cacheKey = $"{metadataType}_{typeof(T).Name}";
        
        if (_cache.TryGetValue(cacheKey, out var cachedItems))
        {
            return (IEnumerable<T>)cachedItems;
        }
        
        string endpoint = metadataType.EndsWith("s") ? metadataType : $"{metadataType}s";
        var response = await _httpClient.GetAsync($"/api/metadata/{endpoint}");
        
        if (response.IsSuccessStatusCode)
        {
            var items = await response.Content.ReadFromJsonAsync<IEnumerable<T>>();
            var itemsList = items?.ToList() ?? new List<T>();
            _cache[cacheKey] = itemsList;
            return itemsList;
        }
        
        throw new Exception($"Failed to load {metadataType} metadata");
    }
    
    public Task<IEnumerable<EventStatusDefinition>> GetEventStatusesAsync() => 
        GetMetadataItemsAsync<EventStatusDefinition>("eventStatus");
        
    // public Task<IEnumerable<AttendanceModeDefinition>> GetAttendanceModesAsync() => 
    //     GetMetadataItemsAsync<AttendanceModeDefinition>("attendanceMode");
    
    public void ClearCache(string metadataType = null)
    {
        if (metadataType == null)
        {
            _cache.Clear();
        }
        else
        {
            var keysToRemove = _cache.Keys
                .Where(k => k.StartsWith($"{metadataType}_"))
                .ToList();
                
            foreach (var key in keysToRemove)
            {
                _cache.Remove(key);
            }
        }
    }

    Task<IEnumerable<EventStatusDefinition>> IMetadataService.GetEventStatusesAsync()
    {
        throw new NotImplementedException();
    }

    public T? GetMetadataItemByValue<T>(string metadataType, string value) where T : IMetadataItem
    {
        throw new NotImplementedException();
    }

    public bool IsValidMetadataValue(string metadataType, string value)
    {
        throw new NotImplementedException();
    }
}